# balancing-http-client

./: .gitignore  .hh-release.yaml  CODEOWNERS  README.md  changelog.yaml  pyproject.toml  setup.py
docker/: Dockerfile.building
http_client/: __init__.py  balancing.py  consul_parser.py  exceptions.py  options.py  request_response.py  testing.py  util.py
http_client/model/: consul_config.py
http_client/parsing/: consul_parser.py  response_parser.py
rust/rustik/: Cargo.toml  pyproject.toml
rust/rustik/src/: lib.rs
tests/: conftest.py  test_adaptive_balancing_strategy.py  test_balancing_base.py  test_balancing_exceptionally_resetting_server.py  test_balancing_exceptionally_shutdown_server.py  test_balancing_gracefully_shutdown_server.py  test_balancing_in_application.py  test_balancing_linger_resetting_server.py  test_balancing_low_backlog_server.py  test_balancing_not_closed_socket_server.py  test_balancing_not_existing_server.py  test_balancing_resetting_server.py  test_balancing_tracing.py  test_client_post_url.py  test_codestyle.py  test_consul_parser.py  test_http_client_balancer.py  test_http_client_parameters.py  test_mfd.py  test_mock_http_client.py  test_parser.py  test_response_parsing.py  test_timeout_status.py  test_upstream_balancing.py  test_upstream_profiles.py
